frontend/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-react-deployment
  labels:
    app: frontend-react
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-react
  template:
    metadata:
      labels:
        app: frontend-react
    spec:
      containers:
      - name: frontend-react
        image: react-app:dev
        ports:
        - containerPort: 80
