frontend/deploy/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
spec:
  selector:
    app: frontend-react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
